# lapack4abaqus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/lapack4abaqus/: __init__.py  gen_lapack.py
tests/: test_gen_lapack.py
